--- a/src/app/modules/administracion/tabla-productos/tabla-productos.component.html
+++ b/src/app/modules/administracion/tabla-productos/tabla-productos.component.html
@@ -23,6 +23,6 @@
 <p-confirmDialog header="Eliminar Producto" icon="fa fa-question-circle" width="425" #cd>
     <p-footer>
         <button type="button" (click)="cd.reject()" class="btn btn-sm btn-outline-secondary"><i class="fa fa-ban"></i> Cancelar</button>
-        <button type="button" (click)="cd.accept()" class="btn btn-sm btn-primary"><i class="fa fa-check"></i> Eliminar</button>
+        <button type="button" (click)="cd.accept()" class="btn btn-sm btn-danger"><i class="fa fa-trash"></i> Eliminar</button>
     </p-footer>
 </p-confirmDialog>
