--- a/src/app/modules/administracion/tabla-procesos/tabla-procesos.component.html
+++ b/src/app/modules/administracion/tabla-procesos/tabla-procesos.component.html
@@ -3,7 +3,7 @@
   <div class="ui-widget-header" style="padding:4px 10px;border-bottom: 0 none">
     <button type="button" class="btn btn-sm btn-success" [routerLink]="['/admin/proceso']"><i class="fa fa-plus"></i> Nuevo</button>
     <button type="button" class="btn btn-sm btn-primary" (click)="goDetalleProceso()" [disabled]="!selected"><i class="fa fa-edit"></i> Detalle</button>
-    <button type="button" class="btn btn-sm btn-danger" [disabled]="!selected"><i class="fa fa-trash"></i> Eliminar</button>
+    <button type="button" class="btn btn-sm btn-danger" (click)="eliminar()" [disabled]="!selected"><i class="fa fa-trash"></i> Eliminar</button>
 
     <div style="float: right;">
       <i class="fa fa-search" style="margin:4px 4px 0 0"></i>
@@ -19,3 +19,10 @@
     <p-column field="descripcion" header="Descripcion" [style]="{'width':'30%'}" styleClass='text-left'></p-column>    
   </p-dataTable>
 </div>
+
+<p-confirmDialog header="Eliminar Proceso" icon="fa fa-question-circle" width="425" #cd>
+    <p-footer>
+        <button type="button" (click)="cd.reject()" class="btn btn-sm btn-outline-secondary"><i class="fa fa-ban"></i> Cancelar</button>
+        <button type="button" (click)="cd.accept()" class="btn btn-sm btn-danger"><i class="fa fa-trash"></i> Eliminar</button>
+    </p-footer>
+</p-confirmDialog>
