ajustes en zindex blockui

--- a/src/app/layouts/full-layout.component.html
+++ b/src/app/layouts/full-layout.component.html
@@ -9,7 +9,7 @@
       <a class="nav-link navbar-toggler" href="#" appSidebarToggler>&#9776;</a>
     </li>
     <li class="nav-item px-3">
-      <a class="nav-link" [routerLink]="['/dashboard']">Dashboard</a>
+      <a class="nav-link" [routerLink]="['/dashboard']">Inicio</a>
     </li>
     <li class="nav-item px-3">
       <a class="nav-link" [routerLink]="['/admin/tabla-productos']">Productos</a>
@@ -47,7 +47,7 @@
     <nav class="sidebar-nav">
       <ul class="nav">
         <li class="nav-item">
-          <a class="nav-link" routerLinkActive="active" [routerLink]="['/dashboard']"><i class="icon-speedometer"></i> Dashboard <span class="badge badge-info">NEW</span></a>
+          <a class="nav-link" routerLinkActive="active" [routerLink]="['/dashboard']"><i class="fa fa-home"></i> Inicio</a>
         </li>
         <li class="divider"></li>
         <li class="nav-title">
