--- a/src/app/modules/administracion/tabla-centros-costos/tabla-centros-costos.component.html
+++ b/src/app/modules/administracion/tabla-centros-costos/tabla-centros-costos.component.html
@@ -2,8 +2,8 @@
   <h4>Centros de Costo <small>Tabla general de centros de costos</small></h4>
   <div class="ui-widget-header" style="padding:4px 10px;border-bottom: 0 none">
     <button type="button" class="btn btn-sm btn-success" [routerLink]="['/admin/ccosto']"><i class="fa fa-plus"></i> Nuevo</button>
-    <button type="button" class="btn btn-sm btn-primary" [disabled]="!selected"><i class="fa fa-edit"></i> Detalle</button>    
-    <button type="button" class="btn btn-sm btn-danger" [disabled]="!selected"><i class="fa fa-trash"></i> Eliminar</button>    
+    <button type="button" class="btn btn-sm btn-primary" [disabled]="!selected"><i class="fa fa-edit"></i> Detalle</button>
+    <button type="button" class="btn btn-sm btn-danger" [disabled]="!selected"><i class="fa fa-trash"></i> Eliminar</button>
 
     <div style="float: right;">
       <i class="fa fa-search" style="margin:4px 4px 0 0"></i>
@@ -11,10 +11,17 @@
     </div>
   </div>
   <p-dataTable #dt [value]="centros_costos" selectionMode="single" [(selection)]="selected" dataKey="codigo" [rows]="12" [paginator]="true"
-    [globalFilter]="gb" emptyMessage="No hay datos para mostrar" [loading]="!centros_costos">
-    <p-column field="codigo" header="Codigo" [style]="{'width':'10%'}" styleClass='text-left'></p-column>
-    <p-column field="nombre" header="Nombre" [style]="{'width':'30%'}" styleClass='text-left'></p-column>
-    <p-column field="tipo_centro_costo.nombre" header="Tipo" [style]="{'width':'15%'}" styleClass='text-left'></p-column>
-    <p-column field="reporta" header="Reporta Produccion" [style]="{'width':'15%'}" styleClass='text-left'></p-column>    
+    [globalFilter]="gb" emptyMessage="No hay datos para mostrar" [loading]="!centros_costos" sortMode="multiple">
+    <p-column field="codigo" header="Codigo" [style]="{'width':'10%'}" styleClass='text-left' [sortable]="true"></p-column>
+    <p-column field="nombre" header="Nombre" [style]="{'width':'30%'}" styleClass='text-left' [sortable]="true"></p-column>
+    <p-column field="tipo_centro_costo.nombre" header="Tipo" [style]="{'width':'15%'}" styleClass='text-left' [sortable]="true"></p-column>
+    <p-column field="reporta" header="Reporta Produccion" [style]="{'width':'15%'}" styleClass='text-left' [sortable]="true">
+      <ng-template let-ccosto="rowData" pTemplate="body">
+        <span *ngIf="ccosto.reporta; else noreporta">Si</span>
+        <ng-template #noreporta>
+          <span>No</span>
+        </ng-template>
+      </ng-template>
+    </p-column>
   </p-dataTable>
 </div>
