--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -24,7 +24,7 @@ h4 small{
     top: 100px !important;
 }
 
-.ui-widget-content .ui-dialog-buttonpane{
+.ui-dialog-buttonpane{
     border: none !important;
 }
 
