--- a/src/app/modules/administracion/centro-costo/centro-costo.component.html
+++ b/src/app/modules/administracion/centro-costo/centro-costo.component.html
@@ -42,9 +42,9 @@
             <tabset>
               <tab>
                 <ng-template tabHeading><i class="fa fa-money"></i> Conceptos de Gastos</ng-template>
-                <p-treeTable [value]="centroCosto.conceptos_gastos" selectionMode="single" [(selection)]="selectedFile">
-                  <p-column field="nombre" header="Elemento de Costo / Codigo"></p-column>
-                  <p-column field="descripcion" header="Descripcion"></p-column>
+                <p-treeTable [value]="centroCosto.conceptos_gastos" selectionMode="single" [(selection)]="selectedFile" [contextMenu]="cmcg">
+                  <p-column field="nombre" header="Elemento de Costo / Codigo" styleClass='text-left'></p-column>
+                  <p-column field="descripcion" header="Descripcion" styleClass='text-left'></p-column>
                   <p-column field="costo_real" header="Monto" styleClass='text-right'></p-column>
                   <p-footer>
                     <div style="text-align: right;"><strong>Costo Total: {{total_costo}}</strong></div>
@@ -53,10 +53,10 @@
               </tab>
               <tab>
                 <ng-template tabHeading><i class="fa fa-clock-o"></i> Horas</ng-template>
-                <p-dataTable [value]="lista_materiales" selectionMode="single" [(selection)]="selectedMaterial" dataKey="codigo" [resizableColumns]="true">
+                <p-dataTable [value]="centroCosto.tiempos" selectionMode="single" [(selection)]="selectedMaterial" dataKey="id" [resizableColumns]="true" [contextMenu]="cmt">
                   <p-column field="fecha" header="Fecha" [style]="{'width':'20%'}" styleClass='text-left'></p-column>
-                  <p-column field="elemento_costo" header="Elemento de Costo" [style]="{'width':'55%'}" styleClass='text-left'></p-column>
-                  <p-column field="cantidad_horas" header="Cantida de Horas" [style]="{'width':'15%'}" styleClass='text-right'></p-column>
+                  <p-column field="elemento_costo.nombre" header="Elemento de Costo" [style]="{'width':'55%'}" styleClass='text-left'></p-column>
+                  <p-column field="tiempo" header="Cantida de Horas" [style]="{'width':'15%'}" styleClass='text-right'></p-column>
                 </p-dataTable>
               </tab>
             </tabset>
@@ -82,3 +82,6 @@
     <button type="button" (click)="cd.accept()" class="btn btn-sm btn-success"><i class="fa fa-save"></i> Guardar</button>
   </p-footer>
 </p-confirmDialog>
+
+<p-contextMenu #cmcg [model]="itemsCg"></p-contextMenu>
+<p-contextMenu #cmt [model]="itemsTmp"></p-contextMenu>
