--- a/src/app/modules/administracion/carga-masiva/carga-conceptos-gastos/carga-conceptos-gastos.component.html
+++ b/src/app/modules/administracion/carga-masiva/carga-conceptos-gastos/carga-conceptos-gastos.component.html
@@ -1,8 +1,8 @@
 <div class="row">
   <div class="col-sm-4">
     <p-fileUpload name="demo[]" url="http://localhost/CPC2/public/api/carga_masiva/upload?token=eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJzdWIiOjEsImlzcyI6Imh0dHA6XC9cL2xvY2FsaG9zdFwvQ1BDXC9wdWJsaWNcL2FwaVwvYXV0aGVudGljYXRlIiwiaWF0IjoxNDk3MDI0OTMzLCJleHAiOjE0OTcwMjg1MzMsIm5iZiI6MTQ5NzAyNDkzMywianRpIjoiMUFOamI5elVCMmFwTlM1TSJ9.mBfBH1ONlht3YZDSg2hOEY0cwyj4gbYxMQTqVxjHktc"
-      (onUpload)="onUpload($event)" accept=".xlsx,.xls" (onBeforeUpload)="onBeforeUpload($event)" maxFileSize="1000000" chooseLabel="Archivo"
-      uploadLabel="Subir" cancelLabel="Cancelar">
+      (onUpload)="onUpload($event)" (onBeforeSend)="onBeforeSend($event)" accept=".xlsx,.xls" maxFileSize="1000000" 
+      chooseLabel="Archivo" uploadLabel="Subir" cancelLabel="Cancelar">
       <ng-template pTemplate="toolbar">
         <br>
         <br>
@@ -19,7 +19,7 @@
           <p-spinner size="10" name="hoja" [(ngModel)]="hoja" [step]="1"></p-spinner>
         </div>
       </ng-template>
-      <ng-template pTemplate type="content">
+      <ng-template pTemplate="content">
         <ul *ngIf="uploadedFiles.length">
           <li *ngFor="let file of uploadedFiles">{{file.name}} - {{file.size}} bytes</li>
         </ul>
