--- a/src/app/modules/administracion/centro-costo/centro-costo.component.html
+++ b/src/app/modules/administracion/centro-costo/centro-costo.component.html
@@ -42,7 +42,7 @@
             <tabset>
               <tab>
                 <ng-template tabHeading><i class="fa fa-money"></i> Conceptos de Gastos</ng-template>
-                <p-treeTable [value]="centroCosto.conceptos_gastos" selectionMode="single" [(selection)]="selectedFile" [contextMenu]="cmcg">
+                <p-treeTable [value]="centroCosto.conceptos_gastos" selectionMode="single" [(selection)]="selectedConceptoGasto" [contextMenu]="cmcg">
                   <p-column field="nombre" header="Elemento de Costo / Codigo" styleClass='text-left'></p-column>
                   <p-column field="descripcion" header="Descripcion" styleClass='text-left'></p-column>
                   <p-column field="costo_real" header="Monto" styleClass='text-right'></p-column>
@@ -53,7 +53,7 @@
               </tab>
               <tab>
                 <ng-template tabHeading><i class="fa fa-clock-o"></i> Horas</ng-template>
-                <p-dataTable [value]="centroCosto.tiempos" selectionMode="single" [(selection)]="selectedMaterial" dataKey="id" [resizableColumns]="true" [contextMenu]="cmt">
+                <p-dataTable [value]="centroCosto.tiempos" selectionMode="single" [(selection)]="selectedTiempo" dataKey="id" [resizableColumns]="true" [contextMenu]="cmt">
                   <p-column field="fecha" header="Fecha" [style]="{'width':'20%'}" styleClass='text-left'></p-column>
                   <p-column field="elemento_costo.nombre" header="Elemento de Costo" [style]="{'width':'55%'}" styleClass='text-left'></p-column>
                   <p-column field="tiempo" header="Cantida de Horas" [style]="{'width':'15%'}" styleClass='text-right'></p-column>
